web-infras/parser/tests/fixtures/babel/core/uncategorised/373/output.txt
[SyntaxError]: invalid left value (1,3)
1|--1
 | ^
